# whisperX

./: README.md  pyproject.toml
whisperx/: __main__.py  alignment.py  asr.py  diarize.py  trans.py  transcribe.py  utils.py
whisperx/vads/: pyannote.py
